# E3SM

.github/: pull_request_template.md
cime_config/machines/: config_machines.xml
cime_config/machines/cmake_macros/: gnu.cmake  gnu_workmac.cmake
components/eam/bld/namelist_files/: namelist_definition.xml
components/eam/src/control/: runtime_opts.F90
components/eam/src/dynamics/se/: dp_coupling.F90  dyn_grid.F90
components/eam/src/physics/cam/: convect_deep.F90  phys_grid.F90  phys_grid_nbrhd.F90  phys_grid_nbrhd_util.F90  phys_grid_types.F90  physics_types.F90  physpkg.F90  ppgrid.F90  zm_conv.F90  zm_conv_intr.F90
components/elm/src/main/: controlMod.F90
components/homme/: CMakeLists.txt
components/homme/machines/: blake-cpu-gcc.cmake  blake-cpu-gcc.env  pm-cpu-gcc.cmake  workmac-gcc.cmake
components/homme/src/share/compose/: cedr.hpp  compose_slmm.cpp
components/homme/src/sweqx/: sweq_mod.F90
components/homme/test_execs/: CMakeLists.txt
components/homme/test_execs/swtcP/: CMakeLists.txt
components/mpas-ocean/src/analysis_members/: mpas_ocn_okubo_weiss.F
components/omega/: CMakeLists.txt  CTestConfig.cmake  CTestScript.cmake  OmegaBuild.cmake
components/omega/configs/: Default.yml  Perf.yml
components/omega/doc/: conf.py  index.md
components/omega/doc/design/: OmegaV0ShallowWater.md  TimeStepping.md  TridiagonalSolver.md
components/omega/doc/devGuide/: CMakeBuild.md  Field.md  IO.md  QuickStart.md  TimeStepping.md  TridiagonalSolvers.md
components/omega/doc/userGuide/: IOStreams.md  TendencyTerms.md  TimeStepping.md  TridiagonalSolvers.md
components/omega/machines/: blake-cpu-gcc.cmake  blake-cpu-gcc.env  blake-cpu-intel.cmake  blake-cpu-intel.env  blake-h100-gcc.cmake  blake-h100-gcc.env  blake-pvc-intel.cmake  blake-pvc-intel.env  chrysalis-gnu.cmake  chrysalis-intel.cmake  chrysalis-intel.env  frontier-cpu-gcc.cmake  frontier-cpu-gcc.env  frontier-cpu-gnu.cmake  frontier-crayclang.cmake  frontier-crayomegagpu.cmake  frontier-gnu.cmake  frontier-gpu-amdclang.cmake  frontier-gpu-amdclang.env  perlmutter-cpu-gcc.cmake  perlmutter-cpu-gcc.env  perlmutter-cpu-gnu.cmake  perlmutter-cpu-intel.cmake  perlmutter-cpu-intel.env  perlmutter-cpu-nvidia.cmake  perlmutter-gpu-gcc.cmake  perlmutter-gpu-gcc.env  perlmutter-gpu-gnu.cmake  perlmutter-gpu-nvidia.cmake  run_perf.sh  sunspot-cpu-intel.cmake  sunspot-cpu-intel.env  sunspot-gpu-intel.cmake  sunspot-gpu-intel.env  workmac-clang.cmake  workmac-gcc.cmake  workmac.cmake  workmac_gnu.cmake
components/omega/machines/cime/: chrysalis-gnu.cmake  chrysalis-intel.cmake  frontier-crayclang.cmake  frontier-crayclanggpu.cmake  frontier-craycray-mphipcc.cmake  frontier-craycray.cmake  frontier-craygnu.cmake  frontier-gnu.cmake  pm-cpu-gnu.cmake  pm-cpu-intel.cmake  pm-cpu-nvidia.cmake  pm-gpu-gnugpu.cmake  pm-gpu-nvidiagpu.cmake
components/omega/machines/nocime/: aurora-gpu-intel.cmake  blake-cpu-gcc.cmake  blake-cpu-gcc.env  blake-cpu-intel.cmake  blake-cpu-intel.env  blake-h100-gcc.cmake  blake-h100-gcc.env  blake-pvc-intel.cmake  blake-pvc-intel.env  chrysalis-intel.cmake  chrysalis-intel.env  frontier-cpu-amdclang.cmake  frontier-cpu-amdclang.env  frontier-cpu-gcc.cmake  frontier-cpu-gcc.env  frontier-gpu-amdclang.cmake  frontier-gpu-amdclang.env  liczydlo-cpu-amdclang.cmake  liczydlo-cpu-gcc.cmake  liczydlo-gpu-amdclang.cmake  pm-cpu-gcc.cmake  pm-cpu-gcc.env  pm-cpu-intel.cmake  pm-cpu-intel.env  pm-gpu-gcc.cmake  pm-gpu-gcc.env  sunspot-cpu-intel.cmake  sunspot-cpu-intel.env  sunspot-gpu-intel.cmake  sunspot-gpu-intel.env  workmac-clang.cmake
components/omega/src/: CMakeLists.txt
components/omega/src/asm/: CMakeLists.txt  ke_grad.cpp  pv_flux.cpp  thick_div.cpp
components/omega/src/base/: DataTypes.h  Decomp.cpp  Halo.cpp  Halo.h  IO.cpp  IO.h  MachEnv.cpp  MachEnv.h  TriDiagSolvers.h  Tridiagonal.h
components/omega/src/drivers/standalone/: OceanDriver.cpp
components/omega/src/infra/: Field.cpp  Field.h  IOStream.cpp  IOStream.h  OmegaKokkos.h  TimeMgr.cpp  TimeMgr.h
components/omega/src/ocn/: AuxiliaryState.cpp  AuxiliaryState.h  CustomTendencyTerms.cpp  CustomTendencyTerms.h  HorzMesh.cpp  HorzMesh.h  HorzOperators.h  OceanInit.cpp  OceanRun.cpp  OceanState.cpp  OceanState.h  Tendencies.cpp  TendencyTerms.cpp  TendencyTerms.h  Tracers.cpp  VerticalAdv.cpp  VerticalAdv.h
components/omega/src/ocn/auxiliaryVars/: KineticAuxVars.h  LayerThicknessAuxVars.h  TracerAuxVars.h  VelocityDel2AuxVars.h  VorticityAuxVars.h  WindForcingAuxVars.cpp  WindForcingAuxVars.h
components/omega/src/timeStepping/: ForwardBackwardStepper.cpp  RungeKutta4Stepper.cpp  TimeStepper.cpp  TimeStepper.h
components/omega/src/timestepping/: ForwardBackwardStepper.cpp  RK4Stepper.cpp  RK4Stepper.h  RungeKutta4Stepper.cpp  TimeStepper.cpp  TimeStepper.h
components/omega/test/: CMakeLists.txt
components/omega/test/base/: BroadcastTest.cpp  DataTypesTest.cpp  DecompTest.cpp  HaloTest.cpp  IOTest.cpp  MachEnvTest.cpp  ReductionsTest.cpp  TriDiagSolversTest.cpp  TridiagonalTest.cpp
components/omega/test/drivers/: StandaloneDriverTest.cpp
components/omega/test/infra/: ConfigTest.cpp  DimensionTest.cpp  FieldTest.cpp  IOStreamTest.cpp  LoggingTest.cpp  OmegaKokkosTest.cpp  TimeMgrTest.cpp
components/omega/test/ocn/: AuxiliaryStateTest.cpp  AuxiliaryVarsTest.cpp  HorzMeshTest.cpp  HorzOperatorsTest.cpp  OceanTestCommon.h  OperatorsTest.cpp  StateTest.cpp  TendenciesTest.cpp  TendencyTermsTest.cpp  TracersTest.cpp  VerticalAdvTest.cpp
components/omega/test/perf/: PerfTest.cpp
components/omega/test/timeStepping/: SteadyZonalTest.cpp  TimeStepperTest.cpp
components/omega/test/timestepping/: TimeStepperTest.cpp
